--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: Liaqat Ali Shaiz
-logo: portfolio/shaiz profile design.png
+logo: portfolio/Liaqat-Ali-Shaiz.png
 theme: jekyll-theme-minimal
