--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,7 @@
 title: Liaqat Ali Shaiz
 logo: portfolio/Liaqat-Ali-Shaiz.png
+contact:
+  email: "Liaqat.Ali.Shaiz2@gmail.com"
+  linkedin: "https://linkedin.com/in/liaqat-ali-shaiz/"
+  github: "https://github.com/shaizawan"
 theme: jekyll-theme-minimal
