--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,10 @@
 title: Liaqat Ali Shaiz
+title: Liaqat Ali Shaiz Portfolio
 logo: portfolio/Shaiz1.png
+description: >-
+  Power BI | Excel | SQL | Python — Data Analyst Portfolio
 theme: jekyll-theme-minimal
+
+# Optional links
+github: https://github.com/shaizawan1
+email: Liaqat.Ali.Shaiz2@gmail.com
