--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
 title: Liaqat Ali Shaiz
-title: Liaqat Ali Shaiz Portfolio
 logo: portfolio/Shaiz1.png
 description: >-
-  Power BI | Excel | SQL | Python — Data Analyst Portfolio
+  Power BI | Excel | SQL | Python 
 theme: jekyll-theme-minimal
 
 # Optional links
